// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagItem renders 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c3 {
  position: relative;
  top: 0;
  width: 1.5rem;
  height: 1.5rem;
  fill: #4b286d;
}

.c0 {
  margin-top: 1rem;
  overflow: visible;
  color: #4b286d;
  background: #fff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  border: 1px solid #4b286d;
  border-radius: 1.25rem;
  height: 2.5rem;
}

.c0:hover {
  background: #fff;
}

.c0:hover:after {
  content: '';
  position: absolute;
  top: -2px;
  left: -2px;
  bottom: -2px;
  right: -2px;
  border: 1px solid #33204C;
  border-radius: 1.375rem;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus {
  outline: none;
  background-color: #fff;
}

.c0:focus:after {
  content: '';
  position: absolute;
  top: -11px;
  left: -11px;
  bottom: -11px;
  right: -11px;
  border: 3px solid #7557A0;
  margin: 5px;
  border-radius: 1.5625rem;
}

.c0:active {
  background-color: #F1EFF4;
}

.c0:after {
  content: '';
}

.c2 {
  margin-left: 0.5rem;
}

<TagItem
  isLoading={false}
  isSelected={false}
  onClick={[Function]}
>
  <TagItem__StyledTagButton
    aria-checked={false}
    between={2}
    inline={true}
    isLoading={false}
    isSelected={false}
    onClick={[Function]}
    role="switch"
    tag="button"
  >
    <StyledComponent
      aria-checked={false}
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "TagItem__StyledTagButton-u8wmmz-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "margin-top: 1rem;",
              [Function],
            ],
          },
          "displayName": "TagItem__StyledTagButton",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "below": [Function],
            "between": [Function],
            "children": [Function],
            "className": [Function],
            "horizontal": [Function],
            "inline": [Function],
            "inset": [Function],
            "tag": [Function],
            "vertical": [Function],
          },
          "render": [Function],
          "styledComponentId": "TagItem__StyledTagButton-u8wmmz-0",
          "target": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "below": undefined,
              "between": undefined,
              "className": undefined,
              "horizontal": undefined,
              "inline": false,
              "inset": undefined,
              "tag": "div",
              "vertical": undefined,
            },
            "displayName": "Box",
            "propTypes": Object {
              "below": [Function],
              "between": [Function],
              "children": [Function],
              "className": [Function],
              "horizontal": [Function],
              "inline": [Function],
              "inset": [Function],
              "tag": [Function],
              "vertical": [Function],
            },
            "render": [Function],
          },
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={true}
      isLoading={false}
      isSelected={false}
      onClick={[Function]}
      role="switch"
      tag="button"
    >
      <Box
        aria-checked={false}
        between={2}
        className="c0"
        inline={true}
        isLoading={false}
        isSelected={false}
        onClick={[Function]}
        role="switch"
        tag="button"
      >
        <styled.div
          aria-checked={false}
          between={2}
          className="c0"
          inline={true}
          isLoading={false}
          isSelected={false}
          onClick={[Function]}
          role="switch"
          tag="button"
        >
          <StyledComponent
            aria-checked={false}
            between={2}
            className="c0"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bdVaJa",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bdVaJa",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            inline={true}
            isLoading={false}
            isSelected={false}
            onClick={[Function]}
            role="switch"
            tag="button"
          >
            <button
              aria-checked={false}
              className="c1 c0 TagItem__StyledTagButton-u8wmmz-0 c0"
              onClick={[Function]}
              role="switch"
            >
              <TagItem__StyledText>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "TagItem__StyledText-u8wmmz-1",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "margin-left: 0.5rem;",
                        ],
                      },
                      "displayName": "TagItem__StyledText",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "TagItem__StyledText-u8wmmz-1",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <span
                    className="c2"
                  >
                    Android
                  </span>
                </StyledComponent>
              </TagItem__StyledText>
              <Dependent
                color="telusPurple"
              >
                <Dependent
                  color="telusPurple"
                >
                  <styled.svg
                    color="telusPurple"
                    data-testid="dependentSvg"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <StyledComponent
                      color="telusPurple"
                      data-testid="dependentSvg"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [
                            Object {
                              "aria-hidden": true,
                              "focusable": false,
                            },
                          ],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-ifAKCX",
                            "isStatic": false,
                            "lastClassName": "c3",
                            "rules": Array [
                              [Function],
                              [Function],
                              [Function],
                            ],
                          },
                          "displayName": "styled.svg",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-ifAKCX",
                          "target": "svg",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <svg
                        aria-hidden={true}
                        className="c3"
                        color="telusPurple"
                        data-testid="dependentSvg"
                        focusable={false}
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          d="M12 24C5.383 24 0 18.617 0 12S5.383 0 12 0s12 5.383 12 12-5.383 12-12 12zm0-22.957C5.958 1.043 1.043 5.958 1.043 12c0 6.042 4.915 10.957 10.957 10.957 6.042 0 10.957-4.915 10.957-10.957 0-6.042-4.915-10.957-10.957-10.957zm-.697 11.654l-5.7-.176A.632.632 0 0 1 5 11.892v.21c0-.332.27-.605.602-.605h5.697v-.1l.178-5.791a.64.64 0 0 1 .63-.606h-.209c.334 0 .605.267.605.602v5.895h5.895c.335 0 .602.27.602.605v-.21a.64.64 0 0 1-.606.63l-5.79.178-.101.001v5.697a.605.605 0 0 1-.605.602h.21a.632.632 0 0 1-.63-.603l-.175-5.7z"
                          fillRule="nonzero"
                        />
                      </svg>
                    </StyledComponent>
                  </styled.svg>
                </Dependent>
              </Dependent>
            </button>
          </StyledComponent>
        </styled.div>
      </Box>
    </StyledComponent>
  </TagItem__StyledTagButton>
</TagItem>
`;

exports[`TagItem renders with a pressed state when isLoading is true 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c3 {
  position: relative;
  top: 0;
  width: 1.5rem;
  height: 1.5rem;
  fill: #4b286d;
}

.c0 {
  margin-top: 1rem;
  overflow: visible;
  color: #4b286d;
  background: #F1EFF4;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  border: 1px solid #4b286d;
  border-radius: 1.25rem;
  height: 2.5rem;
}

.c0:hover {
  background: #fff;
}

.c0:hover:after {
  content: '';
  position: absolute;
  top: -2px;
  left: -2px;
  bottom: -2px;
  right: -2px;
  border: 1px solid #33204C;
  border-radius: 1.375rem;
}

.c0::-moz-focus-inner {
  border: 0;
}

.c0:focus {
  outline: none;
  background-color: #F1EFF4;
}

.c0:focus:after {
  content: '';
  position: absolute;
  top: -11px;
  left: -11px;
  bottom: -11px;
  right: -11px;
  border: 3px solid #7557A0;
  margin: 5px;
  border-radius: 1.5625rem;
}

.c0:active {
  background-color: #F1EFF4;
}

.c0:after {
  content: '';
}

.c2 {
  margin-left: 0.5rem;
}

<TagItem
  isLoading={true}
  isSelected={false}
  onClick={[Function]}
>
  <TagItem__StyledTagButton
    aria-checked={false}
    between={2}
    inline={true}
    isLoading={true}
    isSelected={false}
    onClick={[Function]}
    role="switch"
    tag="button"
  >
    <StyledComponent
      aria-checked={false}
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "TagItem__StyledTagButton-u8wmmz-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "margin-top: 1rem;",
              [Function],
            ],
          },
          "displayName": "TagItem__StyledTagButton",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "below": [Function],
            "between": [Function],
            "children": [Function],
            "className": [Function],
            "horizontal": [Function],
            "inline": [Function],
            "inset": [Function],
            "tag": [Function],
            "vertical": [Function],
          },
          "render": [Function],
          "styledComponentId": "TagItem__StyledTagButton-u8wmmz-0",
          "target": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "below": undefined,
              "between": undefined,
              "className": undefined,
              "horizontal": undefined,
              "inline": false,
              "inset": undefined,
              "tag": "div",
              "vertical": undefined,
            },
            "displayName": "Box",
            "propTypes": Object {
              "below": [Function],
              "between": [Function],
              "children": [Function],
              "className": [Function],
              "horizontal": [Function],
              "inline": [Function],
              "inset": [Function],
              "tag": [Function],
              "vertical": [Function],
            },
            "render": [Function],
          },
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={true}
      isLoading={true}
      isSelected={false}
      onClick={[Function]}
      role="switch"
      tag="button"
    >
      <Box
        aria-checked={false}
        between={2}
        className="c0"
        inline={true}
        isLoading={true}
        isSelected={false}
        onClick={[Function]}
        role="switch"
        tag="button"
      >
        <styled.div
          aria-checked={false}
          between={2}
          className="c0"
          inline={true}
          isLoading={true}
          isSelected={false}
          onClick={[Function]}
          role="switch"
          tag="button"
        >
          <StyledComponent
            aria-checked={false}
            between={2}
            className="c0"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bdVaJa",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bdVaJa",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            inline={true}
            isLoading={true}
            isSelected={false}
            onClick={[Function]}
            role="switch"
            tag="button"
          >
            <button
              aria-checked={false}
              className="c1 c0 TagItem__StyledTagButton-u8wmmz-0 c0"
              onClick={[Function]}
              role="switch"
            >
              <TagItem__StyledText>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "TagItem__StyledText-u8wmmz-1",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "margin-left: 0.5rem;",
                        ],
                      },
                      "displayName": "TagItem__StyledText",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "TagItem__StyledText-u8wmmz-1",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <span
                    className="c2"
                  >
                    Android
                  </span>
                </StyledComponent>
              </TagItem__StyledText>
              <Dependent
                color="telusPurple"
              >
                <Dependent
                  color="telusPurple"
                >
                  <styled.svg
                    color="telusPurple"
                    data-testid="dependentSvg"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <StyledComponent
                      color="telusPurple"
                      data-testid="dependentSvg"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [
                            Object {
                              "aria-hidden": true,
                              "focusable": false,
                            },
                          ],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-ifAKCX",
                            "isStatic": false,
                            "lastClassName": "c3",
                            "rules": Array [
                              [Function],
                              [Function],
                              [Function],
                            ],
                          },
                          "displayName": "styled.svg",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-ifAKCX",
                          "target": "svg",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <svg
                        aria-hidden={true}
                        className="c3"
                        color="telusPurple"
                        data-testid="dependentSvg"
                        focusable={false}
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          d="M12 24C5.383 24 0 18.617 0 12S5.383 0 12 0s12 5.383 12 12-5.383 12-12 12zm0-22.957C5.958 1.043 1.043 5.958 1.043 12c0 6.042 4.915 10.957 10.957 10.957 6.042 0 10.957-4.915 10.957-10.957 0-6.042-4.915-10.957-10.957-10.957zm-.697 11.654l-5.7-.176A.632.632 0 0 1 5 11.892v.21c0-.332.27-.605.602-.605h5.697v-.1l.178-5.791a.64.64 0 0 1 .63-.606h-.209c.334 0 .605.267.605.602v5.895h5.895c.335 0 .602.27.602.605v-.21a.64.64 0 0 1-.606.63l-5.79.178-.101.001v5.697a.605.605 0 0 1-.605.602h.21a.632.632 0 0 1-.63-.603l-.175-5.7z"
                          fillRule="nonzero"
                        />
                      </svg>
                    </StyledComponent>
                  </styled.svg>
                </Dependent>
              </Dependent>
            </button>
          </StyledComponent>
        </styled.div>
      </Box>
    </StyledComponent>
  </TagItem__StyledTagButton>
</TagItem>
`;
